Add article about react

--- a/data/blog/new-features-in-v1.mdx
+++ b/data/blog/new-features-in-v1.mdx
@@ -91,6 +91,7 @@ Here's the full TOC rendered in a disclosure element.
 ```
 
 <TOCInline toc={props.toc} asDisclosure />
+<TOCInline toc={props.toc} asDisclosure />
 
 ## Layouts
 
